[package]
name = "os"
version = "0.1.0"
edition = "2021"
authors = ["Abel van Hulst <abelvanhulst@gmail.com>", "and everyone else who has worked on this project on GitHub"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"